# youtube-sentiment-analysis

./: .dockerignore  Dockerfile  README.md  api.http  params.yaml  pyproject.toml  test.py
.github/workflows/: cicd.yaml
fastapi-app/: main.py
mflow-setup-with-garage/: .env.example  Makefile  Readme.md  docker-compose.yaml  garage.toml  init-garage.sh  prometheus.yml  promtail-config.yml
mflow-setup-with-garage/grafana/provisioning/dashboards/: dashboards.yml  fastapi.json
mflow-setup-with-garage/grafana/provisioning/datasources/: datasources.yml
mflow-setup-with-garage/mlflow-data/: mlflow.db
notebooks/: 01__preprocesing-and-EDA.ipynb  02__experiment-01__baseline-model.ipynb  03__experiment-02__bow_vs_tfidf.ipynb  04__experiment-03-tfidf-max-features.ipynb  05__experiment-04-imbalance_data_handeling.ipynb  06__experiment-05_xgboot_with-hpt.ipynb
src/model/: model_evaluation.py  register_model.py
yt-sentiment-chrome-plugin-frontend/: popup.html  popup.js  styles.css
