[project]
name = "youtube-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.96",
    "dvc>=3.67.1",
    "fastapi[standard]>=0.136.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.11.1",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools==80.10.2",
    "wordcloud>=1.9.6",
]
